# vegova-docker-workshop

./: .gitignore  Dockerfile  PLAN.md  pyproject.toml
app/: main.py
tasks/: 0_START.md  1_DOCKER_COMPOSE.md  2_DATABASE_CONTAINER.md  3_DEVELOPMENT_SERVER.md  4_TEST_CONTAINER.md  5_PRODUCTION_BUILD.md
tests/: test_app.py
